--- a/CSS/all.css
+++ b/CSS/all.css
@@ -166,7 +166,7 @@ a {
 /* 主架構 */
 .container {
     /* margin: 0 auto; */
-    max-width: 100vw;
+    max-width: 100%;
     margin-right: calc(100% - 100vw);
 }
 
