--- a/CSS/all.css
+++ b/CSS/all.css
@@ -166,12 +166,12 @@ a {
 /* 主架構 */
 .container {
     /* margin: 0 auto; */
-    max-width: 100%;
+    max-width: 100vw;
     margin-right: calc(100% - 100vw);
 }
 
 .header {
-    width: 100vw;
+    width: 100%;
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
     background: #FFFFFF;
     display: flex;
