--- a/CSS/all.css
+++ b/CSS/all.css
@@ -971,6 +971,12 @@ video {
     font-size: 18px;
 }
 
+@media(max-width:1366px) {
+    .projects h3 {
+        padding: 185px 0 25px 0;
+    }
+}
+
 @media(max-width:884px) {
     .link {
         font-size: 20px;
