--- a/CSS/all.css
+++ b/CSS/all.css
@@ -144,6 +144,10 @@ table {
     box-sizing: border-box;
 }
 
+html {
+    overflow-x: hidden;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     line-height: 1.2;
@@ -155,18 +159,19 @@ img {
 }
 
 a {
-    text-decoration: none
+    text-decoration: none;
 }
 
 
 /* 主架構 */
 .container {
-    margin: 0 auto;
-    max-width: 100vw;
+    /* margin: 0 auto; */
+    max-width: 100%;
+    margin-right: calc(100% - 100vw);
 }
 
 .header {
-    width: 100vw;
+    width: 100%;
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
     background: #FFFFFF;
     display: flex;
@@ -178,7 +183,7 @@ a {
 
 /* Logo 圖片取代文字 */
 .logo {
-    background: url(/images/logo/YIN\ YIN.svg) no-repeat;
+    background: url(/images/logo/YINYIN.svg) no-repeat;
     width: 143px;
     height: 30px;
     text-indent: 101%;
@@ -421,7 +426,7 @@ video {
 
 /* 自我簡介-背景 */
 .about {
-    background: url(/images/background/ABout\ me\ BG.svg);
+    background: url(/images/background/ABoutMeBG.png);
     height: 100vh;
     width: 100vw;
     background-size: cover;
@@ -440,7 +445,7 @@ video {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 5px;
+    padding: 60px 5px 5px 5px;
 }
 
 /* 自我簡介-大頭照 */
@@ -479,7 +484,7 @@ video {
     display: flex;
     font-weight: 500;
     font-size: 16px;
-    padding: 22px;
+    padding: 25px 22px 30px 22px;
 }
 
 .bio-content p {
@@ -510,7 +515,7 @@ video {
     font-size: 45px;
     letter-spacing: 0.05em;
     color: white;
-    padding-bottom: 35px;
+    padding-bottom: 30px;
 }
 
 /* 自我簡介-右半邊內容-文字段落 */
@@ -525,6 +530,12 @@ video {
 /* 自我簡介-右半邊內容-第一段文字 */
 .textPast {
     padding-bottom: 40px;
+}
+
+@media(max-width:1366px) {
+    .aboutMe-content {
+        padding: 30px 5px;
+    }
 }
 
 @media(max-width:884px) {
@@ -637,14 +648,14 @@ video {
 
 /* 經歷-背景 */
 .experience {
-    background: url(/images/background/Experience\ BG.svg);
+    background: url(/images/background/ExperienceBG.svg);
     height: 100vh;
     width: 100vw;
     background-size: cover;
     background-position: center;
     position: relative;
     color: white;
-    padding: 0px 20px 10px 20px;
+    padding: 0 10px 20px 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -656,6 +667,7 @@ video {
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
+
 }
 
 /* 經歷-標題 */
@@ -663,7 +675,7 @@ video {
     font-weight: 900;
     font-size: 45px;
     letter-spacing: 0.05em;
-    padding: 185px 0 30px 0;
+    padding: 185px 0 40px 0;
     text-align: center;
 }
 
@@ -680,6 +692,10 @@ video {
     width: 170px;
 }
 
+.company img {
+    width: 42%;
+}
+
 .company p {
     font-size: 16px;
     line-height: 30px;
@@ -690,7 +706,12 @@ video {
     display: flex;
     align-items: center;
     line-height: 35px;
-    padding: 10px 90px;
+    padding: 10px;
+}
+
+.job {
+    width: 450px;
+    padding: 0 40px;
 }
 
 .job-title,
@@ -704,25 +725,21 @@ video {
     padding: 7px 0;
 }
 
-.skills {
-    padding-left: 90px;
-}
-
 .job p,
 .skills p {
     font-size: 18px;
-    line-height: 34px;
+    line-height: 32px;
     letter-spacing: 0.07em;
     text-align: left;
 }
 
-@media(max-width:1024px) {
+@media(max-width:1366px) {
     .experience {
-        height: auto;
+        padding-bottom: 60px;
     }
 
-    .experience-content {
-        padding: 0 0 100px 50px;
+    .experience {
+        height: auto;
     }
 
     .experience h3 {
@@ -730,26 +747,31 @@ video {
         padding: 145px 0 20px 0;
     }
 
+    .company img {
+        width: 40%;
+    }
+
     .work-description {
-        padding: 10px 70px;
+        padding: 10px
+    }
+
+    .job {
+        width: 380px;
+        padding: 0 20px;
     }
 
     .job-title,
     .job-skill {
         color: #5EFFE6;
-        font-size: 21px;
+        font-size: 20px;
         text-align: left;
         padding: 4px 0;
-    }
-
-    .skills {
-        padding-left: 70px;
     }
 
     .job p,
     .skills p {
         font-size: 17px;
-        line-height: 32px;
+        line-height: 30px;
         text-align: left;
     }
 }
@@ -776,7 +798,7 @@ video {
     }
 
     .company img {
-        width: 45%;
+        width: 40%;
     }
 
     .company p {
@@ -788,6 +810,11 @@ video {
         align-items: flex-start;
         line-height: 35px;
         padding: 0 0 16px 0;
+    }
+
+    .job {
+        width: 325px;
+        padding: 0;
     }
 
     .job-title,
@@ -803,10 +830,6 @@ video {
 
     .job-skill {
         display: none;
-    }
-
-    .skills {
-        padding-left: 0px;
     }
 
     .job p,
@@ -843,6 +866,7 @@ video {
     .skills p {
         font-size: 14px;
         line-height: 28px;
+        padding: 0 25px;
     }
 }
 
@@ -855,7 +879,7 @@ video {
 
 /* 專案 */
 .projects {
-    background: url(/images/background/Projects\ BG.svg);
+    background: url(/images/background/ProjectsBG.svg);
     height: 100vh;
     width: 100vw;
     background-size: cover;
@@ -872,7 +896,7 @@ video {
     font-size: 45px;
     letter-spacing: 0.05em;
     color: black;
-    padding: 185px 0 67px 0;
+    padding: 185px 0 50px 0;
 }
 
 /* 兩個專案的外層設定 */
@@ -937,15 +961,21 @@ video {
 /* 專案-作品標題 */
 .projects-name h5 {
     font-weight: 900;
-    font-size: 26px;
+    font-size: 24px;
     line-height: 40px;
     letter-spacing: 0.12em;
     color: #005D7A;
-    padding: 10px 5px 5px 5px;
+    padding: 5px;
 }
 
 .projects-name p {
     font-size: 18px;
+}
+
+@media(max-width:1366px) {
+    .projects h3 {
+        padding: 185px 0 25px 0;
+    }
 }
 
 @media(max-width:884px) {
@@ -960,8 +990,11 @@ video {
 
     .projects h3 {
         font-size: 35px;
-        padding-bottom: 20px;
         text-shadow: rgb(255, 255, 255) .1px .1px 30px;
+    }
+
+    .projects-name h5 {
+        font-size: 18px;
     }
 
     .webDesign {
@@ -978,18 +1011,9 @@ video {
         font-size: 16px;
     }
 
-    .projects {
-        height: auto;
-        padding-bottom: 100px;
-    }
-
     .projects h3 {
         font-size: 30px;
         padding: 120px 0 20px 0;
-    }
-
-    .webDesign {
-        flex-direction: column;
     }
 
     .webDesign li {
@@ -1007,13 +1031,13 @@ video {
     }
 
     .webDesign img {
-        width: 50%;
+        width: 35%;
     }
 }
 
 /* 聯絡 */
 .contact {
-    background: url(/images/background/Contact\ BG.svg);
+    background: url(/images/background/ContactBG.svg);
     height: 100vh;
     width: 100vw;
     background-size: cover;
