--- a/CSS/all.css
+++ b/CSS/all.css
@@ -178,7 +178,7 @@ a {
 
 /* Logo 圖片取代文字 */
 .logo {
-    background: url(/images/logo/YIN\ YIN.svg) no-repeat;
+    background: url(/images/logo/YINYIN.svg) no-repeat;
     width: 143px;
     height: 30px;
     text-indent: 101%;
@@ -421,7 +421,7 @@ video {
 
 /* 自我簡介-背景 */
 .about {
-    background: url(/images/background/ABout\ me\ BG.svg);
+    background: url(/images/background/ABoutmeBG.svg);
     height: 100vh;
     width: 100vw;
     background-size: cover;
@@ -637,7 +637,7 @@ video {
 
 /* 經歷-背景 */
 .experience {
-    background: url(/images/background/Experience\ BG.svg);
+    background: url(/images/background/ExperienceBG.svg);
     height: 100vh;
     width: 100vw;
     background-size: cover;
@@ -859,7 +859,7 @@ video {
 
 /* 專案 */
 .projects {
-    background: url(/images/background/Projects\ BG.svg);
+    background: url(/images/background/ProjectsBG.svg);
     height: 100vh;
     width: 100vw;
     background-size: cover;
@@ -1017,7 +1017,7 @@ video {
 
 /* 聯絡 */
 .contact {
-    background: url(/images/background/Contact\ BG.svg);
+    background: url(/images/background/ContactBG.svg);
     height: 100vh;
     width: 100vw;
     background-size: cover;
